# xsd-to-openapi-schema

./: .gitignore  CLAUDE.md  LICENSE  README.md  debug_xmlschema.py  debug_xmlschema2.py  pyproject.toml  requirements.txt
examples/: demo.py
schemas/afcommand/xsd/: AFCommand.xsd  AFCommon.xsd  AFTypes.xsd
src/xsd_to_openapi/: __init__.py  cli.py  converter.py  models.py  simple_parser.py
tests/: test_converter.py
